--- a/apps/docs/content/docs/react/api-references/schema-validation.mdx
+++ b/apps/docs/content/docs/react/api-references/schema-validation.mdx
@@ -20,13 +20,11 @@ const Schema = z.object({
 
 type MyFormValues = z.infer<typeof Schema>;
 
-const stepperInstance = defineStepper([
-  {
-    id: "personal",
-    label: "Personal Information",
-    schema: Schema,
-  }
-]);
+const stepperInstance = defineStepper({
+  id: "personal",
+  label: "Personal Information",
+  schema: Schema,
+});
 ```
 
 ## ValiBot
@@ -42,13 +40,11 @@ const Schema = v.object({
 
 type MyFormValues = v.InferInput<typeof Schema>;
 
-const stepperInstance = defineStepper([
-  {
-    id: "personal",
-    label: "Personal Information",
-    schema: Schema,
-  }
-]);
+const stepperInstance = defineStepper({
+  id: "personal",
+  label: "Personal Information",
+  schema: Schema,
+});
 ```
 
 ## ArkType
@@ -64,18 +60,16 @@ const Schema = type({
 
 type MyFormValues = typeof Schema.infer;
 
-const stepperInstance = defineStepper([
-  {
-    id: "personal",
-    label: "Personal Information",
-    schema: Schema,
-  }
-]);
+const stepperInstance = defineStepper({
+  id: "personal",
+  label: "Personal Information",
+  schema: Schema,
+});
 ```
 
-## Accessing Schemas
+## Accessing schemas
 
-Once you've defined your stepper with schemas, you can access them through the stepper instance:
+Steps are plain objects; you can add a `schema` (or any key) to each step. Access via the stepper:
 
 ```tsx twoslash
 import * as React from "react";
@@ -92,20 +86,20 @@ const AddressSchema = z.object({
   city: z.string().min(1),
 });
 
-const { useStepper } = defineStepper([
+const { useStepper } = defineStepper(
   { id: "personal", title: "Personal", schema: PersonalSchema },
-  { id: "address", title: "Address", schema: AddressSchema },
-]);
+  { id: "address", title: "Address", schema: AddressSchema }
+);
 
 function MyForm() {
   const stepper = useStepper();
 
-  // Access schema from current step
-  const currentSchema = stepper.current.data.schema;
+  // Current step object (includes schema if you added it)
+  const currentSchema = stepper.current.schema;
 
-  // Access schema from specific step
-  const personalSchema = stepper.step("personal").data.schema;
-  const addressSchema = stepper.step("address").data.schema;
+  // Step by ID
+  const personalStep = stepper.get("personal");
+  const personalSchema = personalStep?.schema;
 
   return <div>Schema available: {currentSchema ? "Yes" : "No"}</div>;
 }
@@ -133,7 +127,7 @@ const SecondStepSchema = z.object({
 
 const ThirdStepSchema = z.object({});
 
-const stepperInstance = defineStepper([
+const stepperInstance = defineStepper(
   {
     id: "personal-info",
     label: "Personal Information",
@@ -149,13 +143,9 @@ const stepperInstance = defineStepper([
     label: "Complete",
     schema: ThirdStepSchema,
   }
-]);
+);
 ```
 
 <Callout type="info">
-  You've probably noticed that the last step has an empty schema. This is
-  because stepperize infers all the steps, and when you want to access your
-  `stepper.current.data.schema`, one of them could be undefined. To avoid this, you can
-  simply add an empty schema. Or, if you prefer, you can choose not to do this
-  and validate for yourself whether the schema exists.
+  Steps are plain objects. If you add a `schema` property, access it as `stepper.current.schema` or `stepper.get(id)?.schema`. The last step can have an empty schema or no schema; check for existence when needed.
 </Callout>
